correction de la bordure de la bannière en version mobile

--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -19,7 +19,7 @@ h1 {
 }
 
 .home__banner_image {
-    border-radius: 25px;
+    border-radius: 10px;
     object-fit: cover;
     width: 100%;
     height: 100%;
